--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Assets/Css/Wild-Wood-Zoo-Home-Style.css" />
+    <link rel="stylesheet" href="Assets/Css/Wild-Wood-Zoo-Home-Style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
@@ -36,7 +36,7 @@
                 <div class="navbar">
                     <div class="logo-sec">
                         <a href="Wild-Wood-Zoo-Home.html">
-                            <img src="../Assets/Images/logo2.png" alt="">
+                            <img src="Assets/Images/logo2.png" alt="">
                         </a>
                     </div>
                     <ul class="list-sec">
@@ -176,7 +176,7 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <video class="w-100 h-100" autoplay muted loop>
-                        <source src="../Assets/Images/Animal-page-video.mp4" type="video/mp4">
+                        <source src="Assets/Images/Animal-page-video.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -220,7 +220,7 @@
 
                     <div class="display-crd-container">
                         <div class="display-crd-img">
-                            <img src="../Assets/Images/lizard.png" alt="">
+                            <img src="Assets/Images/lizard.png">
                         </div>
                         <div class="display-crd-details">
                             <h2
@@ -421,7 +421,7 @@
                     <footer class="footer">
                         <div class="footer-container">
                             <div class="logo">
-                                <img src="../Assets/Images/logo2.png" alt="Wild Wood Zoo Logo">
+                                <img src="Assets/Images/logo2.png" alt="Wild Wood Zoo Logo">
                             </div>
                             <div class="links">
                                 <h3>Quick Links</h3>
