--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         </a>
                     </div>
                     <ul class="list-sec">
-                        <li><a href="/Web-Pages/Wild-Wood-Zoo-Animals.html">Animals</a></li>
-                        <li><a href="/Web-Pages/Wild-Wood-Zoo-Events.html">Events</a></li>
-                        <li><a href="/Web-Pages/Wild-Wood-Zoo-AboutUs.html">About Us</a></li>
-                        <li><a href="/Web-Pages/Wild-Wood-Zoo-ContactUs.html">Contact Us</a></li>
+                        <li><a href="Web-Pages/Wild-Wood-Zoo-Animals.html">Animals</a></li>
+                        <li><a href="Web-Pages/Wild-Wood-Zoo-Events.html">Events</a></li>
+                        <li><a href="Web-Pages/Wild-Wood-Zoo-AboutUs.html">About Us</a></li>
+                        <li><a href="Web-Pages/Wild-Wood-Zoo-ContactUs.html">Contact Us</a></li>
                     </ul>
                     <div class="btn-sec">
                         <button data-bs-toggle="modal" data-bs-target="#loginModal">
@@ -426,14 +426,14 @@
                             <div class="links">
                                 <h3>Quick Links</h3>
                                 <ul>
-                                    <li><a href="Wild-Wood-Zoo-Home.html"
+                                    <li><a href="weWild-Wood-Zoo-Home.html"
                                             style="text-decoration: none; color: white; background-color: white; color: black; padding: 6px 6px; border: 2px solid black; border-radius: 8px;">Home</a>
                                     </li>
-                                    <li><a href="Wild-Wood-Zoo-Animals.html"
+                                    <li><a href="Web-Pages/Wild-Wood-Zoo-Animals.html"
                                             style="text-decoration: none; color: white;">Animals</a></li>
-                                    <li><a href="Wild-Wood-Zoo-Events.html"
+                                    <li><a href="Web-Pages/Wild-Wood-Zoo-Events.html"
                                             style="text-decoration: none; color: white;">Events</a></li>
-                                    <li><a href="Wild-Wood-Zoo-AboutUs.html"
+                                    <li><a href="Web-Pages/Wild-Wood-Zoo-AboutUs.html"
                                             style="text-decoration: none; color: white;">About Us</a></li>
                                     <li><a href="#" style="text-decoration: none; color: white;">Contact Us</a></li>
                                 </ul>
