--- a/Web-Pages/Wild-Wood-Zoo-AboutUs.html
+++ b/Web-Pages/Wild-Wood-Zoo-AboutUs.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wild Wood Zoo--About Us</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="/Assets/Css/Wild-Wood-Zoo-AboutUs-Style.css" />
+  <link rel="stylesheet" href="../Assets/Css/Wild-Wood-Zoo-AboutUs-Style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
@@ -26,7 +26,7 @@
       <div class="navbar">
         <div class="logo-sec">
           <a href="/index.html">
-            <img src="/Assets/Images/logo2.png" alt="">
+            <img src="../Assets/Images/logo2.png" alt="">
           </a>
         </div>
         <ul class="list-sec">
@@ -158,13 +158,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" style="height: 100vh;">
-          <img src="/Assets/Images/carouselimage2.jpg" alt="..." class="w-100 h-100">
+          <img src="../Assets/Images/carouselimage2.jpg" alt="..." class="w-100 h-100">
         </div>
         <div class="carousel-item" style="height: 100vh;">
-          <img src="/Assets/Images/carouselimage7.jpg" class="d-block w-100 h-100" alt="...">
+          <img src="../Assets/Images/carouselimage7.jpg" class="d-block w-100 h-100" alt="...">
         </div>
         <div class="carousel-item" style="height: 100vh;">
-          <img src="/Assets/Images/carouselimage9.jpg" class="d-block w-100 h-100" alt="...">
+          <img src="../Assets/Images/carouselimage9.jpg" class="d-block w-100 h-100" alt="...">
         </div>
       </div>
     </div>
@@ -190,12 +190,12 @@
       </p>
     </div><br><br>
     <div class="images">
-      <img src="/Assets/Images/r1.jpg" alt="Zoo Trees" />
-      <img src="/Assets/Images/r2.jpg" alt="Zoo Monkeys" />
-      <img src="/Assets/Images/r6.JPG" alt="Zoo Trees" />
-      <img src="/Assets/Images/r7.jpg" alt="Zoo Trees" />
-      <img src="/Assets/Images/r8.jpg" alt="Zoo Trees" />
-      <img src="/Assets/Images/r9.jpg" alt="Zoo Trees" />
+      <img src="../Assets/Images/r1.jpg" alt="Zoo Trees" />
+      <img src="../Assets/Images/r2.jpg" alt="Zoo Monkeys" />
+      <img src="../Assets/Images/r6.JPG" alt="Zoo Trees" />
+      <img src="../Assets/Images/r7.jpg" alt="Zoo Trees" />
+      <img src="../Assets/Images/r8.jpg" alt="Zoo Trees" />
+      <img src="../Assets/Images/r9.jpg" alt="Zoo Trees" />
     </div>
   </section>
 
