--- a/Web-Pages/Wild-Wood-Zoo-Animals.html
+++ b/Web-Pages/Wild-Wood-Zoo-Animals.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/Css/Wild-Wood-Zoo-Animals-Style.css" />
+    <link rel="stylesheet" href="../Assets/Css/Wild-Wood-Zoo-Animals-Style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
@@ -31,7 +31,7 @@
                 <div class="navbar">
                     <div class="logo-sec">
                         <a href="/index.html">
-                            <img src="/Assets/Images/logo2.png" alt="">
+                            <img src="../Assets/Images/logo2.png" alt="">
                         </a>
                     </div>
                     <ul class="list-sec">
@@ -173,16 +173,16 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" style="height: 100vh;">
-                        <img src="/Assets/Images/carouselimage1.jpg" alt="..." class="w-100 h-100">
+                        <img src="../Assets/Images/carouselimage1.jpg" alt="..." class="w-100 h-100">
                     </div>
                     <div class="carousel-item" style="height: 100vh;">
-                        <img src="/Assets/Images/carouselimage3.jpg" class="d-block w-100 h-100" alt="...">
+                        <img src="../Assets/Images/carouselimage3.jpg" class="d-block w-100 h-100" alt="...">
                     </div>
                     <div class="carousel-item" style="height: 100vh;">
-                        <img src="/Assets/Images/carouselimage6.jpg" class="d-block w-100 h-100" alt="...">
+                        <img src="../Assets/Images/carouselimage6.jpg" class="d-block w-100 h-100" alt="...">
                     </div>
                     <div class="carousel-item" style="height: 100vh;">
-                        <img src="/Assets/Images/carouselimage9.jpg" class="d-block w-100 h-100" alt="...">
+                        <img src="../Assets/Images/carouselimage9.jpg" class="d-block w-100 h-100" alt="...">
                     </div>
                 </div>
             </div>
@@ -205,19 +205,19 @@
 
                         <!-- Card 1 Start -->
                         <div class="card1" style="width: 30%;">
-                            <img src="/Assets/Images/Award2.png" height="350px" width="100%">
+                            <img src="../Assets/Images/Award2.png" height="350px" width="100%">
                         </div>
                         <!-- Card 1 End -->
 
                         <!-- Card 2 Start -->
                         <div class="card2" style="width: 30%;">
-                            <img src="/Assets/Images/Award1.png" height="350px" width="100%">
+                            <img src="../Assets/Images/Award1.png" height="350px" width="100%">
                         </div>
                         <!-- Card 2 End -->
 
                         <!-- Card 3 Start -->
                         <div class="card3" style="width: 30%;">
-                            <img src="/Assets/Images/Award2.png" height="350px" width="100%">
+                            <img src="../Assets/Images/Award2.png" height="350px" width="100%">
                         </div>
                         <!-- Card 3 End -->
                     </div>
@@ -630,7 +630,7 @@
                     <footer class="footer">
                         <div class="footer-container">
                             <div class="logo">
-                                <img src="/Assets/Images/logo2.png" alt="Wild Wood Zoo Logo">
+                                <img src="../Assets/Images/logo2.png" alt="Wild Wood Zoo Logo">
                             </div>
                             <div class="links">
                                 <h3>Quick Links</h3>
