--- a/Web-Pages/Wild-Wood-Zoo-AboutUs.html
+++ b/Web-Pages/Wild-Wood-Zoo-AboutUs.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wild Wood Zoo--About Us</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="../Assets/Css/Wild-Wood-Zoo-AboutUs-Style.css" />
+  <link rel="stylesheet" href="/Assets/Css/Wild-Wood-Zoo-AboutUs-Style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
